Include PMD report generation in workflow
Add step to generate PMD report in workflow

--- a/.github/workflows/myworkflow.yml
+++ b/.github/workflows/myworkflow.yml
@@ -29,3 +29,5 @@ jobs:
       run: chmod +x gradlew
     - name: Build with Gradle
       run: xvfb-run ./gradlew build
+    - name: pmd report
+      run: cat /home/runner/work/jpacman/jpacman/build/reports/pmd/test.html
